# sd-bot

./: .coveragerc  .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  Pipfile  README.md  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: build.yml  codeql-analysis.yml  generate-version.yml  release.yml  validation.yml
config/: sd-bot.config.sample
scr/: DiscordBot.py  main.py
sd_bot/: __main__.py  bot_commands.py  sd_bot.py
sd_bot/common/: Logger.py
sd_bot/dicer/: Dicer.py
sd_bot/rpgrules/: campaign.py  dicer.py  note.py
src/: DiscordBot.py  main.py
src/common/: Dicer.py  Logger.py
test/: Bot_test.py  Dicer_test.py  campaing_test.py  commands_test.py  note_test.py
tests/: Bot_test.py  Dicer_test.py  Main_test.py
